# flappy-bird

./: .coveragerc  README.md  pyproject.toml  tasks.py
dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: hsl.md  monopoli.md
src/: event_handler.py  game_manager.py  gameplay.py  ground_movement.py  main.py  pipe_movement.py  renderer.py  start.py
src/data/: scores.json
src/db/: database_actions.py  initialize_database.py
src/game_phases/: end.py  gameplay.py  start.py  stats.py
src/movements/: ground_movement.py  pipe_movement.py
src/renderer/: base_renderer.py  end_renderer.py  gameplay_renderer.py  mixin_renderer.py  start_renderer.py  stats_renderer.py
src/sprites/: bird.py  ground.py  pipe.py
src/tests/: bird_test.py  database_test.py  event_handler_test.py  game_manager_test.py  gameplay_phase_test.py  ground_test.py  pipe_test.py  score_test.py  start_phase_test.py
src/utils/: asset_loader.py  button.py  phase_manager.py  score.py  sound_manager.py  text.py
